fixed bug at application-list; added routerlink to employee names at application-list; changed notification-list design to a fixed size with scrollbar; fixed typeError bug at event-details.component.html

--- a/frontend/src/app/components/notification-list/notification-list.component.scss
+++ b/frontend/src/app/components/notification-list/notification-list.component.scss
@@ -7,3 +7,11 @@
 .btn-link {
   padding: 0;
 }
+
+.list-group{
+  max-height: 400px;
+  margin-bottom: 10px;
+  overflow:scroll;
+  -webkit-overflow-scrolling: touch;
+  overflow-y:auto
+}
